--- a/sctnet/res/layout/company_info_activity.xml
+++ b/sctnet/res/layout/company_info_activity.xml
@@ -52,6 +52,18 @@
         android:background="#ffffff"
         android:flipInterval="30"
         android:persistentDrawingCache="animation" />
+    
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_company_info2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/companyInfo_tab_title"
+        android:layout_gravity="center"
+        android:background="#ffffff"
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation"
+        android:visibility="gone"
+         />
 
     <LinearLayout
         android:id="@+id/footbar_layout_ly"
