--- a/sctnet/res/layout/select_area_item.xml
+++ b/sctnet/res/layout/select_area_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/background"
-    android:orientation="vertical"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
     >
    
     <TextView 
@@ -16,8 +17,22 @@
         android:paddingRight="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:textSize="16dp"
         android:textColor="@color/black"
         />
-	
+	<ImageView
+        android:id="@+id/image"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_alignTop="@+id/area"
+        android:contentDescription="@null"
+        android:shadowColor="#ffffffff"
+        android:shadowDx="0.0"
+        android:shadowDy="1.0"
+        android:shadowRadius="1.0"
+        android:src="@drawable/arrow" />
 
-</LinearLayout>
+</RelativeLayout>
