职位搜索、信息咨询、

--- a/sctnet/res/layout/home_activity.xml
+++ b/sctnet/res/layout/home_activity.xml
@@ -26,6 +26,7 @@
              android:hint="@string/homeactivityhint"
              android:gravity="center_vertical"
               android:paddingLeft="35dip"
+              android:focusable="false"
               android:singleLine="true"
                />  
                
