--- a/sctnet/res/layout/company_info_layout.xml
+++ b/sctnet/res/layout/company_info_layout.xml
@@ -19,7 +19,7 @@
             android:padding="2dp"
             android:text="XXXXXX股份有限公司"
             android:textColor="@color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/company_industry"
@@ -28,7 +28,7 @@
             android:padding="2dp"
             android:text="IT/计算机软件"
             android:textColor="#3B3B3B"
-            android:textSize="13dp" />
+            android:textSize="13sp" />
 
         <com.sctn.sctnet.view.DashedLineView
             android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
                     android:padding="2dp"
                     android:text="公司性质"
                     android:textColor="#3B3B3B"
-                    android:textSize="13dp" />
+                    android:textSize="13sp" />
 
                 <TextView
                     android:id="@+id/company_type"
@@ -60,7 +60,7 @@
                     android:padding="2dp"
                     android:text="国企"
                     android:textColor="@color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -72,13 +72,12 @@
                 android:paddingRight="10dp" >
 
                 <TextView
-                    android:id="@+id/company_scale"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:text="公司规模"
                     android:textColor="#3B3B3B"
-                    android:textSize="13dp" />
+                    android:textSize="13sp" />
 
                 <TextView
                     android:id="@+id/company_scale"
@@ -87,7 +86,7 @@
                     android:padding="2dp"
                     android:text="1000~9999人"
                     android:textColor="@color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -113,7 +112,7 @@
                 android:padding="2dp"
                 android:text="北京市朝阳区北苑路乙108号"
                 android:textColor="@color/black"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
         <com.sctn.sctnet.view.DashedLineView
@@ -127,16 +126,17 @@
             android:layout_marginTop="8dp"
             android:text="公司介绍"
             android:textColor="@color/blue"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/company_intro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:lineSpacingExtra="3dp"
             android:text="苹果公司（Apple Inc.）是美国的家高科技公司，2007年由美国苹果电脑（Apple Computer, Inc.）电子科技产品，在2013年世界500强排行榜中排名第19，总部位于加利福尼亚州的库比蒂诺（Cupertino）。苹果公司由史蒂夫·乔布斯、斯蒂夫·盖瑞·沃兹尼亚克和罗纳德·杰拉尔德·包的在1976年4月1日创立，在高科技企业中以创新而闻名，设计并打造了iPod和iTunes、Mac 笔记本电脑和台式电脑、OS X 操作系统，以及革命性的iPhone和 iPad。苹果公司已连续三年成为全球市值最大公司，在2012年曾经创下6235亿美元记录，在2013年后因企业市值缩水24%为4779亿美元，但仍然还是全球市值最大公司。"
             android:textColor="#3B3B3B"
-            android:textSize="14dp" />
+            android:textSize="14sp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -144,7 +144,7 @@
             android:layout_marginTop="8dp"
             android:text="单位联系方式"
             android:textColor="@color/blue"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -156,9 +156,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:text="联系人："
+                android:text="联系人及联系电话："
                 android:textColor="#3B3B3B"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/company_contacts"
@@ -167,10 +167,10 @@
                 android:padding="2dp"
                 android:text="张某某"
                 android:textColor="#3B3B3B"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
         </LinearLayout>
 
-        <LinearLayout
+        <!-- <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
@@ -182,7 +182,7 @@
                 android:padding="2dp"
                 android:text="联系电话："
                 android:textColor="#3B3B3B"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/company_phone"
@@ -191,8 +191,8 @@
                 android:padding="2dp"
                 android:text="13987654321"
                 android:textColor="#3B3B3B"
-                android:textSize="13dp" />
-        </LinearLayout>
+                android:textSize="13sp" />
+        </LinearLayout> -->
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -206,7 +206,7 @@
                 android:padding="2dp"
                 android:text="电子邮箱："
                 android:textColor="#3B3B3B"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/company_email"
@@ -215,7 +215,7 @@
                 android:padding="2dp"
                 android:text="zhangmoumou@email.com"
                 android:textColor="#3B3B3B"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -230,7 +230,7 @@
                 android:padding="2dp"
                 android:text="单位网址："
                 android:textColor="#3B3B3B"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/company_website"
@@ -239,7 +239,7 @@
                 android:padding="2dp"
                 android:text="http://www.zhangmoumou.com"
                 android:textColor="#3B3B3B"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
         </LinearLayout>
 
     </LinearLayout>
