--- a/sctnet/res/layout/select_area_item.xml
+++ b/sctnet/res/layout/select_area_item.xml
@@ -20,7 +20,7 @@
         android:textSize="16dp"
         android:textColor="@color/black"
         />
-	<ImageView
+	<!-- <ImageView
         android:id="@+id/image"
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -33,6 +33,6 @@
         android:shadowDx="0.0"
         android:shadowDy="1.0"
         android:shadowRadius="1.0"
-        android:src="@drawable/arrow" />
+        android:src="@drawable/arrow" /> -->
 
 </RelativeLayout>
